full app dockerized

--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -10,7 +10,20 @@ services:
       - "1433:1433"
     networks:
       - app-network
-    
+  
+  frontend:
+    build:
+      context: ../Frontend  
+      dockerfile: Dockerfile
+    ports:
+      - "3000:5173"  
+    depends_on:
+      - backend
+      - mssql-db
+    environment:
+      - VITE_API_URL=http://localhost:5000
+    networks:
+      - app-network  
 
   backend:
     build:
