--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtConfig": {
+    "ValidIssuer": "apiWithAuthBackend",
+    "ValidAudience": "apiWithAuthBackend",
+    "IssuerSigningKey": "SomethingSecret!!SomethingSecret!"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=BlueJobsDb;User Id=sa;Password=SecretPassword;Encrypt=false;"
   }
 }
