bugfix in tokenservice #43

--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -6,9 +6,9 @@
     }
   },
   "JwtConfig": {
-    "ValidIssuer": "apiWithAuthBackend",
-    "ValidAudience": "apiWithAuthBackend",
-    "IssuerSigningKey": "SomethingSecret!!SomethingSecret!"
+    "ValidIssuer": "SecretPassword",
+    "ValidAudience": "SecretPassword",
+    "IssuerSigningKey": "SecretPassword"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=BlueJobsDb;User Id=sa;Password=SecretPassword;Encrypt=false;"
