--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -23,4 +23,8 @@
         <PackageReference Include="TaskParallelLibrary" Version="1.0.2856" />        
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Model\" />
+    </ItemGroup>
+
 </Project>
